SFUSA/force-app/main/default/objects/Barrel_Recipe__c/fields/Baked_American_Pure_2__c.field-meta.xml
<CustomField>
        <fullName>Baked_American_Pure_2__c</fullName>
        <label>Baked American Pure 2</label>
        <summarizedField>Stave__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Stave__c.Type__c</field>
            <operation>equals</operation>
            <value>Baked American Pure 2</value>
        </summaryFilterItems>
        <summaryForeignKey>Stave__c.Barrel_Recipe__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>