SFUSA/force-app/main/default/objects/Barrel_Recipe__c/fields/Maker_s_46__c.field-meta.xml
<CustomField>
        <fullName>Maker_s_46__c</fullName>
        <label>Maker's 46</label>
        <summarizedField>Stave__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Stave__c.Type__c</field>
            <operation>equals</operation>
            <value>Maker's 46</value>
        </summaryFilterItems>
        <summaryForeignKey>Stave__c.Barrel_Recipe__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>