SFUSA/force-app/main/default/objects/Barrel_Recipe__c/fields/Toasted_French_Spice__c.field-meta.xml
<CustomField>
        <fullName>Toasted_French_Spice__c</fullName>
        <label>Toasted French Spice</label>
        <summarizedField>Stave__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Stave__c.Type__c</field>
            <operation>equals</operation>
            <value>Toasted French Spice</value>
        </summaryFilterItems>
        <summaryForeignKey>Stave__c.Barrel_Recipe__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>